<resources>
    <string name="app_name">Vilmu</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="duration">Duration</string>
    <string name="year">Year</string>
    <string name="director">Director</string>
    <string name="overview">Overview</string>
    <string name="user_score">User Score</string>
    <string name="id_not_valid">ID not valid</string>
    <string name="movie_not_found">Movie Not Found</string>
    <string name="tv_show_not_found">TV Show Not Found</string>
    <string name="language">Language</string>
    <string name="release_date">Release Date</string>
    <string name="first_air_date">First Air Date</string>
</resources>